# claude-code-test-2

./: .coverage 2  .dockerignore  .env.example  .gitignore  .secrets.baseline  CLAUDE.md  Dockerfile  OPINION.md  PLANNING.md  PRD-tictactoe.md  README.md  TASKS.md  gunicorn.conf.py  pyproject.toml  pytest.ini  run.py  tictactoe.md  wsgi.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py
app/models/: __init__.py  tictactoe.py  user.py
app/routes/: __init__.py  game.py  main.py
app/utils/: ai.py  csrf_protection.py  environment.py  input_sanitizer.py  rate_limiter.py  security.py  validation.py
static/css/: style.css  tictactoe.css
static/js/: tictactoe.js
templates/: base.html  tictactoe.html  welcome.html
tests/: conftest.py  test_basic.py
tests/e2e/: test_tictactoe_gameplay.py  test_user_journey.py
tests/integration/: test_api_endpoints.py  test_game_routes.py
tests/security/: __init__.py  test_csrf_protection.py  test_input_validation.py  test_rate_limiting.py  test_security_headers.py  test_session_security.py
tests/unit/: test_ai_algorithms.py  test_environment.py  test_input_sanitizer.py  test_models.py  test_security.py  test_tictactoe_model.py  test_utils.py
